  actually be able to change # of races/classes on the fly.
- obj_theme implemented (for monster drops).
- MONSTER_ITEM_CONSUME to keep monsters from dropping too much.
[B] wipeout_needless_objects() did nasties. commented out.

19/06/2002 (Jir)
- cloned monsters drop what they had picked up.
- object code optimized somewhat.
- death mold trap
[B] a lv1 sorc could cast 30 magic missles each turn






** [B] stands for Bugfix.
** [C] stands for Client changes.
** [H] stands for Hack and rebalancement :)
** [P] stands for Porting from ToME.

=============================================================================
concisely: what's hot now?

- multiple-dungeons stuff
  + we should preserve level_up_y etc. for manually-added dungeons/towers.
- quest system
- skill system
  + interfere() should be affected by archery/wizardly skills?
  + no SKILL_BOOMERANG ?
- LUA hook
- csfunc
- alignment (let's wait for EE :)
- item stacking

=============================================================================
below this line are the unfixed bugs known:

[B] House doors still seem to crash sometimes. (door even vanishes??)
[B] wpos display hides wound states(eg.'Deep Gash')
[B] ever-charging arts (eg.star)
[B] 'You hit it.' etc in town (99% problem in zcave.m_idx)
    sometimes, monsters attack the player from nowhere.. prolly same root?
	* this only happens when rebooting the server and caves lost.
[B] some monsters become 'immune' to spell attacks.
[B][C] chat-history contains lines with 'mindcrafter'. 
[B] p_ptr->furry, lol
[B] 'Ring of Polymorphing of'.
[B] cannot 'run' near the outer permawall (run_test)
[B] mon_vis, obj_vis etc. are messed while the player is off.
[B] option '-r' puts the server into infinite-loop (genwild)
[B] GCU client flickers like hell. (fix_player)
[B] GCU client cannot handle the cursor very well.
[B] some ivents are not told to the players even when within the sight.

*below are bugs repoorted but not confirmed*
[B] Macro sticks sometimes