@@ -693,6 +693,18 @@
 /* OPTION: allow monsters to carry objects. */
 #define MONSTER_INVENTORY
 
+/* 
+ * OPTION: default radii used for some kinds of magic (like detection).
+ * artifacts uses (DEFAULT_RADIUS * 2) instead.
+ *
+ * TODO: DEFAULT_RADIUS_SPELL should be based on skills!
+ */
+#define DEFAULT_RADIUS			18
+#define DEFAULT_RADIUS_SPELL(p_ptr)	(DEFAULT_RADIUS - 5 + p_ptr->lev / 5)
+#define DEFAULT_RADIUS_DEV(p_ptr)	(DEFAULT_RADIUS - 5 + p_ptr->skill_dev / 8)
+/* get_skill_scale(p_ptr, SKILL_DEVICE, 100) */
+
+
 /*
  * Below this line are client-only options.
  * Probably we'd better separated into another file?	- Jir -
