@@ -846,15 +846,16 @@ extern bool remove_all_curse(int Ind);
 extern bool restore_level(int Ind);
 extern void self_knowledge(int Ind);
 extern bool lose_all_info(int Ind);
-extern bool detect_treasure(int Ind);
-extern bool detect_magic(int Ind);
+extern bool detect_treasure(int Ind, int rad);
+extern bool detect_magic(int Ind, int rad);
 extern bool detect_invisible(int Ind);
 extern bool detect_evil(int Ind);
 extern bool detect_creatures(int Ind);
-extern bool detection(int Ind);
-extern bool detect_object(int Ind);
-extern bool detect_trap(int Ind);
-extern bool detect_sdoor(int Ind);
+extern bool detection(int Ind, int rad);
+extern bool detect_object(int Ind, int rad);
+//extern bool detect_trap(int Ind);
+extern bool detect_trap(int Ind, int rad);
+extern bool detect_sdoor(int Ind, int rad);
 extern void stair_creation(int Ind);
 extern bool enchant(int Ind, object_type *o_ptr, int n, int eflag);
 extern bool enchant_spell(int Ind, int num_hit, int num_dam, int num_ac);
