@@ -3146,13 +3146,13 @@ static void do_slash_cmd(int Ind, char *message)
 					prefix(message, "/en"))
 			{
 				wiz_lite(Ind);
-				(void)detect_treasure(Ind);
-				(void)detect_object(Ind);
-				(void)detect_sdoor(Ind);
-				(void)detect_trap(Ind);
+				(void)detect_treasure(Ind, DEFAULT_RADIUS * 2);
+				(void)detect_object(Ind, DEFAULT_RADIUS * 2);
+				(void)detect_sdoor(Ind, DEFAULT_RADIUS * 2);
+				(void)detect_trap(Ind, DEFAULT_RADIUS * 2);
 				if (k)
 				{
-					(void)detect_trap(Ind);
+//					(void)detect_trap(Ind);
 					identify_pack(Ind);
 					self_knowledge(Ind);
 
